prefect kinda working woo

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         <h1 id="name"></h1>
         <li data-field="house" id="hus"></li>
         <li id="gender"></li>
+        <img src="" alt="" id="prefect" />
       </div>
     </template>
 
