--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
       </p>
       <p id="length"></p>
     </div>
+
+    <!-- TEMPLATE WILL BE POSTED HERE -->
     <div id="container"></div>
+
+    <!--- TEMPLATE HERE --->
     <template id="newtemp">
       <div id="styles">
         <img src="" alt="" id="test" />
@@ -84,6 +88,21 @@
       </div>
     </template>
 
+    <!-- POP UP FOR REMOVING OTHER PREFECT -->
+    <div id="remove_other" class="modal hide">
+      <div class="dialog">
+        <button class="closebutton">X</button>
+        <h1>Warning!</h1>
+        <p>
+          There can only be two prefects from each house, a boy and a girl.
+          <br />
+          Do you wish to remove the other prefect?
+        </p>
+        <button id="removeother">Remove the other prefect</button>
+      </div>
+    </div>
+
+    <!-- POP UP FOR MORE STUDENT INFORMATION -->
     <section id="popup">
       <article id="">
         <span id="close">&#x2715;</span>
