images changed, studentifno popup

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <!-- POP UP FOR MORE STUDENT INFORMATION -->
+    <!-- POP UP FOR MORE STUDENT INFORMATION 
     <section id="popup">
       <article id="">
         <span id="close">&#x2715;</span>
@@ -114,7 +114,22 @@
           <p class="gender"></p>
         </section>
       </article>
-    </section>
+    </section> -->
+
+    <div id="popup" class="modal2 hide2">
+      <div class="dialog2">
+        <button class="closebuttons">X</button>
+        <div>
+          <div><img src="" alt="" id="studentimg" /></div>
+          <div><img src="" alt="" id="crest" /></div>
+        </div>
+        <div id="tester">
+          <h1 id="fullname"></h1>
+          <p class="house"></p>
+          <p class="gender"></p>
+        </div>
+      </div>
+    </div>
     <script src="js.js"></script>
   </body>
 </html>
