blood in info popup

--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
           <h1 id="fullname"></h1>
           <p class="house"></p>
           <p class="gender"></p>
+          <p class="blood"></p>
         </div>
       </div>
     </div>
