SQUAD TOGGLE WORKS "NO CAN DO SIR" alert smiler

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         <li data-field="house" id="hus"></li>
         <li id="gender"></li>
         <img src="" alt="" id="prefect" />
+        <img src="" alt="" id="squad" />
       </div>
     </template>
 
@@ -102,20 +103,7 @@
       </div>
     </div>
 
-    <!-- POP UP FOR MORE STUDENT INFORMATION 
-    <section id="popup">
-      <article id="">
-        <span id="close">&#x2715;</span>
-        <section>
-          <img src="" alt="" id="crest" />
-          <h2 class="nametwo"></h2>
-          <img src="" alt="" id="img" />
-          <p class="house"></p>
-          <p class="gender"></p>
-        </section>
-      </article>
-    </section> -->
-
+    <!-- POP UP FOR MORE STUDENT INFORMATION -->
     <div id="popup" class="modal2 hide2">
       <div class="dialog2">
         <button class="closebuttons">X</button>
