a bit of styling

--- a/index.html
+++ b/index.html
@@ -80,12 +80,18 @@
     <!--- TEMPLATE HERE --->
     <template id="newtemp">
       <div id="styles">
-        <img src="" alt="" id="test" />
-        <h1 id="name"></h1>
-        <li data-field="house" id="hus"></li>
-        <li id="gender"></li>
-        <img src="" alt="" id="prefect" />
-        <img src="" alt="" id="squad" />
+        <div class="left">
+          <img src="" alt="" id="test" />
+          <h1 id="name"></h1>
+          <li data-field="house" id="hus"></li>
+          <li id="gender"></li>
+        </div>
+
+        <div class="right">
+          <img src="" alt="" id="prefect" />
+          <img src="" alt="" id="squad" />
+          <button id="showmore">Student Details</button>
+        </div>
       </div>
     </template>
 
