expel button made

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
           <p class="gender"></p>
           <p class="blood"></p>
         </div>
+        <button class="expel">!</button>
       </div>
     </div>
     <script src="js.js"></script>
