popup for squad

--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
         <button class="expel">!</button>
       </div>
     </div>
+
+    <div id="notsquad" class="modal hide">
+      <div class="dialog">
+        <button class="closebutton">X</button>
+        <h1>Warning!</h1>
+        <p>
+          The student selected does not meet the requirements to become a Squad
+          member.
+        </p>
+        <button id="closebuttonok">I understand</button>
+      </div>
+    </div>
     <script src="js.js"></script>
   </body>
 </html>
