--- a/index.html
+++ b/index.html
@@ -71,7 +71,13 @@
           Slytherin
         </button>
       </p>
-      <p id="length"></p>
+      <p id="totalstudents"></p>
+      <p id="totalgryf"></p>
+      <p id="totalhuffle"></p>
+      <p id="totalsltyh"></p>
+      <p id="totalraven"></p>
+
+      <p></p>
     </div>
 
     <!-- TEMPLATE WILL BE POSTED HERE -->
