--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
       </select>
       <h2>Filter</h2>
       <p>
+        <button class="filter" data-action="filter" data-filter="all">
+          All Students
+        </button>
         <button class="filter" data-action="filter" data-filter="hufflepuff">
           Hufflepuff
         </button>
