doesnt rlly work but its kay

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="search">
-      <input type="text" id="searching" placeholder="Search for xxx" />
+      <input type="text" id="searching" placeholder="Search for a student..." />
     </div>
     <div class="filtering">
       <select name="information" id="info">
@@ -72,6 +72,9 @@
         </button>
         <button class="filter" data-action="filter" data-filter="slytherin">
           Slytherin
+        </button>
+        <button class="filter" data-action="filter" data-filter="expel">
+          Expelled Students
         </button>
       </p>
       <p id="totalstudents"></p>
