--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
       </div>
     </div>
 
+    <!-- POPUP NOTSQUAD -->
     <div id="notsquad" class="modal hide">
       <div class="dialog">
         <button class="closebutton">X</button>
@@ -146,6 +147,18 @@
         <p>
           The student selected does not meet the requirements to become a Squad
           member.
+        </p>
+        <button id="closebuttonok">I understand</button>
+      </div>
+    </div>
+
+    <div id="hacksquad" class="modal hide">
+      <div class="dialog">
+        <button class="closebutton">X</button>
+        <h1>MonkaS</h1>
+        <p>
+          PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh
+          PepeLaugh PepeLaugh
         </p>
         <button id="closebuttonok">I understand</button>
       </div>
