BOUNCE BOUNCE BOUNCE

--- a/index.html
+++ b/index.html
@@ -154,13 +154,14 @@
 
     <div id="hacksquad" class="modal hide">
       <div class="dialog">
-        <button class="closebutton">X</button>
         <h1>MonkaS</h1>
         <p>
           PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh
           PepeLaugh PepeLaugh
         </p>
-        <button id="closebuttonok">I understand</button>
+        <button id="closebuttonok" class="bounce">
+          Close box here, unlucky
+        </button>
       </div>
     </div>
     <script src="js.js"></script>
