--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
       </div>
     </div>
 
+    <!-- POPUP FOR HACKSQUAD -->
     <div id="hacksquad" class="modal hide">
       <div class="dialog">
         <h1>MonkaS</h1>
