show all exepelled students not working

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <input type="text" id="searching" placeholder="Search for a student..." />
     </div>
     <div class="filtering">
+      <!-- SORTING OPTION THING -->
       <select name="information" id="info">
         <option
           value="firstname"
@@ -56,6 +57,8 @@
           Prefects
         </option>
       </select>
+
+      <!-- FILTER BUTTONS -->
       <h2>Filter</h2>
       <p>
         <button class="filter" data-action="filter" data-filter="all">
@@ -77,6 +80,8 @@
           Expelled Students
         </button>
       </p>
+
+      <!-- COUNTERS -->
       <p id="totalstudents"></p>
       <p id="totalgryf"></p>
       <p id="totalhuffle"></p>
