styling and stuff

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
     <div id="popup" class="modal2 hide2">
       <div class="dialog2">
         <button class="closebuttons">X</button>
-        <div>
-          <div><img src="" alt="" id="studentimg" /></div>
-          <div><img src="" alt="" id="crest" /></div>
+        <div class="work">
+          <div><img src="" alt="" id="studentimg" class="work" /></div>
+          <div><img src="" alt="" id="crest" class="abso" /></div>
         </div>
         <div id="tester">
           <h1 id="fullname"></h1>
