expelled studetns counter

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
       <p id="totalhuffle"></p>
       <p id="totalsltyh"></p>
       <p id="totalraven"></p>
-
-      <p></p>
+      <p id="totalexpelled"></p>
     </div>
 
     <!-- TEMPLATE WILL BE POSTED HERE -->
