--- a/index.html
+++ b/index.html
@@ -14,52 +14,8 @@
     />
   </head>
   <body>
-    <div class="search">
-      <input type="text" id="searching" placeholder="Search for a student..." />
-    </div>
+    <!-- FILTER BUTTONS -->
     <div class="filtering">
-      <!-- SORTING OPTION THING -->
-      <select name="information" id="info">
-        <option
-          value="firstname"
-          data-action="sort"
-          data-sort-direction="asc"
-          data-sort="firstName"
-        >
-          Firstname by A-Z
-        </option>
-        <option
-          value="firstname"
-          data-action="sort"
-          data-sort-direction="asc"
-          data-sort="firstNameZA"
-        >
-          Firstname by Z-A
-        </option>
-        <option
-          value="lastname"
-          data-action="sort"
-          data-sort-direction="asc"
-          data-sort="lastName"
-        >
-          Lastname by A-Z
-        </option>
-
-        <option
-          value="lastname"
-          data-action="sort"
-          data-sort-direction="asc"
-          data-sort="lastNameZA"
-        >
-          Lastname by Z-A
-        </option>
-        <option value="prefect" data-action="sort" data-sort-direction="asc">
-          Prefects
-        </option>
-      </select>
-
-      <!-- FILTER BUTTONS -->
-      <h2>Filter</h2>
       <p>
         <button class="filter" data-action="filter" data-filter="all">
           All Students
@@ -80,19 +36,68 @@
           Expelled Students
         </button>
       </p>
-
-      <!-- COUNTERS -->
-      <p id="totalstudents"></p>
-      <p id="totalgryf"></p>
-      <p id="totalhuffle"></p>
-      <p id="totalsltyh"></p>
-      <p id="totalraven"></p>
-      <p id="totalexpelled"></p>
     </div>
 
     <!-- TEMPLATE WILL BE POSTED HERE -->
-    <div id="container"></div>
+    <div class="huh">
+      <!-- SEARCH -->
+      <div class="search">
+        <!-- SORTING OPTION THING -->
+        <select name="information" id="info">
+          <option
+            value="firstname"
+            data-action="sort"
+            data-sort-direction="asc"
+            data-sort="firstName"
+          >
+            Firstname by A-Z
+          </option>
+          <option
+            value="firstname"
+            data-action="sort"
+            data-sort-direction="asc"
+            data-sort="firstNameZA"
+          >
+            Firstname by Z-A
+          </option>
+          <option
+            value="lastname"
+            data-action="sort"
+            data-sort-direction="asc"
+            data-sort="lastName"
+          >
+            Lastname by A-Z
+          </option>
 
+          <option
+            value="lastname"
+            data-action="sort"
+            data-sort-direction="asc"
+            data-sort="lastNameZA"
+          >
+            Lastname by Z-A
+          </option>
+          <option value="prefect" data-action="sort" data-sort-direction="asc">
+            Prefects
+          </option>
+        </select>
+        <input
+          type="text"
+          id="searching"
+          placeholder="Search for a student..."
+        />
+
+        <!-- COUNTERS -->
+        <p id="totalstudents"></p>
+        <p id="totalgryf"></p>
+        <p id="totalhuffle"></p>
+        <p id="totalsltyh"></p>
+        <p id="totalraven"></p>
+        <p id="totalexpelled"></p>
+      </div>
+
+      <div id="container"></div>
+    </div>
     <!--- TEMPLATE HERE --->
     <template id="newtemp">
       <div id="styles">
