--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
     />
   </head>
   <body>
+    <h1 class="center">Hogwarts School of Witchcraft and Wizardry</h1>
+
     <!-- FILTER BUTTONS -->
     <div class="filtering">
-      <p>
-        <button class="filter" data-action="filter" data-filter="all">
-          All Students
-        </button>
-        <button class="filter" data-action="filter" data-filter="hufflepuff">
-          Hufflepuff
-        </button>
-        <button class="filter" data-action="filter" data-filter="gryffindor">
-          Gryffindor
-        </button>
-        <button class="filter" data-action="filter" data-filter="ravenclaw">
-          Ravenclaw
-        </button>
-        <button class="filter" data-action="filter" data-filter="slytherin">
-          Slytherin
-        </button>
-        <button class="filter" data-action="filter" data-filter="expel">
-          Expelled Students
-        </button>
-      </p>
+      <button class="filter" data-action="filter" data-filter="all">
+        All Students
+      </button>
+      <button class="filter" data-action="filter" data-filter="hufflepuff">
+        Hufflepuff
+      </button>
+      <button class="filter" data-action="filter" data-filter="gryffindor">
+        Gryffindor
+      </button>
+      <button class="filter" data-action="filter" data-filter="ravenclaw">
+        Ravenclaw
+      </button>
+      <button class="filter" data-action="filter" data-filter="slytherin">
+        Slytherin
+      </button>
+      <button class="filter" data-action="filter" data-filter="expel">
+        Expelled Students
+      </button>
     </div>
 
     <!-- TEMPLATE WILL BE POSTED HERE -->
