--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
           >
             Lastname by Z-A
           </option>
-          <option value="prefect" data-action="sort" data-sort-direction="asc">
+          <option
+            value="prefect"
+            data-action="sort"
+            data-sort-direction="asc"
+            data-sort="prefects"
+          >
             Prefects
           </option>
         </select>
