--- a/index.html
+++ b/index.html
@@ -170,10 +170,7 @@
     <div id="hacksquad" class="modal hide">
       <div class="dialog">
         <h1>MonkaS</h1>
-        <p>
-          PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh PepeLaugh
-          PepeLaugh PepeLaugh
-        </p>
+        <p>PepeLaugh, no Squad members here but me</p>
         <button id="closebuttonok" class="bounce">
           Close box here, unlucky
         </button>
