--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
           <p class="house"></p>
           <p class="gender"></p>
           <p class="blood"></p>
+          <img src="" alt="" class="prefectos" />
+          <img src="" alt="" class="crests" />
         </div>
         <button class="expel">!</button>
       </div>
